# spec-driven-development-demo

./: .env.template  .gitignore  GEMINI.md  README.md  RUFF.md  UV.md  pyproject.toml  sql_app.db
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: pyproject.toml
backend/src/: database.py  initial_data.py  main.py  models.py
backend/src/api/: lookups.py  summary.py  transactions.py
backend/src/services/: lookups.py  summary.py  transactions.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_summary.py  test_transactions.py
frontend/: pyproject.toml
frontend/src/: app.py  styles.py
frontend/src/callbacks/: summary_callbacks.py  transaction_callbacks.py
frontend/src/components/: navbar.py
frontend/src/pages/: summary.py  transaction.py
frontend/src/utils/: api.py
specs/001-build-a-local/: plan.md  quickstart.md  tasks.md
specs/001-build-a-local/contracts/: openapi.json
specs/001-build-an-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-application/checklists/: requirements.md
specs/001-build-an-application/contracts/: openapi.yaml
specs/001-build-initial-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-initial-app/checklists/: requirements.md
specs/001-build-initial-app/contracts/: openapi.json
