[project]
name = "spec-driven-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
